<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.xywy.test.myretrofit.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hello World!" />
            <Button
                android:id="@+id/btn_retrofit2_test1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_no_params_no_converter_factory"/>

            <Button
                android:id="@+id/btn_retrofit2_test2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_no_params_converer_factory"/>

            <Button
                android:id="@+id/btn_retrofit2_test3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_params_converter_factory"/>

            <Button
                android:id="@+id/btn_retrofit2_test4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_params_converter_factory_after"/>

            <Button
                android:id="@+id/btn_retrofit2_test5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_params_converter_factory_after_more_params"/>

            <Button
                android:id="@+id/btn_retrofit2_test6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_params_converter_factory"/>

            <Button
                android:id="@+id/btn_retrofit2_test8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_params_converter_factory_more_params"/>

            <Button
                android:id="@+id/btn_retrofit2_test7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_params_converter_factory_request_body_params"/>

            <Button
                android:id="@+id/btn_retrofit2_test9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_params_converter_factory_Object_params"/>

            <Button
                android:id="@+id/btn_retrofit2_test10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_params_converter_factory_Object_params2"/>

            <Button
                android:id="@+id/btn_retrofit2_test11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_params_converter_factory_Object_params3"/>

            <Button
                android:id="@+id/btn_retrofit2_test12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_params_converter_factory_upload_files_1"/>

            <Button
                android:id="@+id/btn_retrofit2_test13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_params_converter_factory_upload_files_2"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
